--- a/input.css
+++ b/input.css
@@ -64,6 +64,7 @@ position: relative;
 /* making the background darker */
 .hero {
     background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3));
+    z-index: 600;
 }
 
 .custom-swiper-button::after {
